#26967 - Card tables, collapse fix

--- a/_src/scss/2-components/_tables.scss
+++ b/_src/scss/2-components/_tables.scss
@@ -119,7 +119,18 @@ table.ql-table-better {
     }
 }
 
-// Remove border bottom from last row in tables inside cards
-.card > .table-responsive > .table tbody tr:last-child td {
-    border-bottom: 0;
+// Table inside card (and .table-responsive - but not inside .card-body)
+//
+// Remove bottom border from last row in table and add top border
+// Remove bottom border to second to last row in table if it has a collapse or collapsing sibling
+:where(.card > *:not(.card-body)) > .table > tbody > tr {
+    
+    &:last-child > td {
+        border-top-width: var(--bs-border-width) !important;
+        border-bottom-width: 0 !important;
+    }
+
+    &:has(+ tr:last-child:is(.collapse, .collapsing)) > td {
+        border-bottom-width: 0 !important;
+    }
 }
